templates/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        - budgetbook.me
      secretName: budgetbook.me
  ingressClassName: nginx
  rules:
    - host: budgetbook.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: { { .Values.frontend.SERVICE_PORT } }
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: { { .Values.auth.SERVICE_PORT } }
          - path: /api/expense
            pathType: Prefix
            backend:
              service:
                name: expense
                port:
                  number: { { .Values.expense.SERVICE_PORT } }
          - path: /api/statistics
            pathType: Prefix
            backend:
              service:
                name: statistics
                port:
                  number: { { .Values.statistics.SERVICE_PORT } }
